
  ZOOKEEPER-1236. Security uses proprietary Sun APIs
    (Adalberto Medeiros via phunt)

  ZOOKEEPER-1471. Jute generates invalid C++ code
    (Michi Mutsuzaki via phunt)
    
  ZOOKEEPER-1465. Cluster availability following new leader election 
    takes a long time with large datasets - is correlated to dataset size
    (fpj and Thawan Kooburat via camille)

IMPROVEMENTS:

  ZOOKEEPER-1170. Fix compiler (eclipse) warnings: unused imports,
  unused variables, missing generics (Thomas Koch via phunt)

  ZOOKEEPER-96. The jute parser should get generated from the jj files
  instead of checking in the generated sources (Thomas Koch via phunt)

  ZOOKEEPER-1175. DataNode references parent node for no reason
  (Thomas Koch via phunt)

  ZOOKEEPER-899. Update Netty version in trunk to 3.2.2
  (Thomas Koch via phunt)

  ZOOKEEPER-1182. Make findbugs usable in Eclipse (Thomas Koch via phunt)

  ZOOKEEPER-1184. jute generated files are not being cleaned up via "ant clean"
  (Thomas Koch via phunt)

  ZOOKEEPER-1176. Remove dead code and basic cleanup in DataTree
  (Thomas Koch via phunt)

  ZOOKEEPER-556. Startup messages should account for common error of
  missing leading slash in config files (Thomas Koch via phunt)
   
  ZOOKEEPER-1155. Add windows automated builds (CI) for zookeeper c client bindings. (Dheeraj Agrawal via camille) 

  ZOOKEEPER-1226. extract version check in separate method in PrepRequestProcessor (Thomas Koch via camille)

  ZOOKEEPER-1193. Remove upgrade code (Thomas Koch via phunt)

  ZOOKEEPER-1221. Provide accessors for Request.{hdr|txn} (Thomas Koch via phunt)

  ZOOKEEPER-1216. Fix more eclipse compiler warnings, also in Tests
  (Thomas Koch via phunt)

  ZOOKEEPER-1254. test correct watch handling with multi ops
  (Thomas Koch via phunt)

  ZOOKEEPER-1252. remove unused method o.a.z.test.AxyncTest.restart()
  (Thomas Koch via phunt)

  ZOOKEEPER-1200. Remove obsolete DataTreeBuilder
  (Thomas Koch via phunt)
